Closed Bug 1881437 Opened 1 year ago Closed 1 year ago

Crash in [@ sock_eq]

Categories

(Core :: Networking: DNS, defect, P2)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox123 --- wontfix
firefox124 --- wontfix
firefox125 --- fixed

People

(Reporter: valentin, Assigned: valentin)

References

Details

(Keywords: crash, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/379a4ba4-433d-495c-a069-b6fe90240222

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0  libc.so.6  sock_eq  resolv/resolv/res_send.c:1302
1  libc.so.6  __GI___res_context_send  resolv/resolv/res_send.c:301
2  libc.so.6  __GI___res_context_query  resolv/resolv/res_query.c:221
3  libc.so.6  context_query_common  resolv/resolv/res_query.c:308
3  libc.so.6  res_nquery@@GLIBC_2.34  resolv/resolv/res_query.c:321
4  libxul.so (deleted)  libxul.so @0x3ae6ba2  
5  libxul.so (deleted)  libxul.so @0x3af13b8  
6  libxul.so (deleted)  libxul.so @0x3ae6a76  
7  libxul.so (deleted)  libxul.so @0x3b13a63  
8  libxul.so (deleted)  libxul.so @0x3b13d2e  

Could be a race on _res.

This makes it so each thread has its own __res_state instead of using
the global _res which could cause data races.

Blocks: 1874464
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/344845ab3547 Use a thread local __res_state for HTTPS res_nquery r=necko-reviewers,kershaw
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Regressions: 1881737
Duplicate of this bug: 1881123
Blocks: 1881123
No longer duplicate of this bug: 1881123
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: