Bug 1881437 - Use a thread local __res_state for HTTPS res_nquery r=necko-reviewers,kershaw

This makes it so each thread has its own __res_state instead of using
the global _res which could cause data races.

Differential Revision: https://phabricator.services.mozilla.com/D202400